# mperf

./: .gitignore  CLAUDE.md  Cargo.toml  NOTICE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.module.scss  App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  log_stream.rs  main.rs  session.rs  setup.rs
apps/desktop/src/components/: AboutTab.tsx  AppSelector.tsx  DeviceInfoPanel.module.scss  DeviceInfoPanel.tsx  DeviceSelector.tsx  FpsAdvancedPanel.module.scss  FpsAdvancedPanel.tsx  HistoryView.module.scss  HistoryView.tsx  LetterAvatar.tsx  LiveCpuChart.tsx  LiveFpsChart.tsx  LiveGpuChart.tsx  LiveMemoryChart.tsx  LivePerCoreChart.tsx  LiveTemperatureChart.tsx  LiveView.tsx  LogTerminal.module.scss  LogTerminal.tsx  MarkerOverlay.tsx  MetricsPickerDrawer.module.scss  MetricsPickerDrawer.tsx  PinTooltip.tsx  ScreenTab.module.scss  ScreenTab.tsx  SettingsTab.tsx  SidebarTabs.module.scss  SidebarTabs.tsx  StaticCpuChart.tsx  StaticFpsChart.tsx  StaticGpuChart.tsx  StaticMemoryChart.tsx  StaticPerCoreChart.tsx  StaticTemperatureChart.tsx  chart-shared.module.scss
apps/desktop/src/lib/: chartResize.ts  format.ts  fps-stats.ts  ipc.ts  markers.ts  metricsCatalog.ts  useMetricFrequencies.ts  useMetricsSelection.ts  useResizableSidebar.ts  useStartupCooldown.ts
apps/desktop/src/styles/: globals.scss
crates/android/: Cargo.toml
crates/android/src/: adb.rs  apps.rs  battery.rs  cpu.rs  devices.rs  fps.rs  gpu.rs  lib.rs  logcat.rs  memory.rs  startup.rs  temperature.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  scheduler.rs
crates/ios/: Cargo.toml
crates/ios/examples/: activitytrace_spike.rs  startup_loop.rs
crates/ios/src/: apps.rs  battery.rs  connect.rs  core_profile_session_raw.rs  cpu.rs  devices.rs  graphics.rs  graphics_raw.rs  kdebug_supervisor.rs  launch.rs  lib.rs  os_trace.rs  pid_resolver.rs  startup.rs  syslog.rs  sysmontap_raw.rs
crates/schema/: Cargo.toml
crates/schema/src/: clock.rs  device.rs  error.rs  lib.rs  log.rs  metric.rs  sampler.rs  session.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  model.rs  schema.rs
docs/: abstractions.md  architecture.md  test-cases.md
script/: bump-version.mjs  fetch-binaries.mjs  kill-port.mjs  release.mjs  setup.mjs
