[package]
name = "mperf-schema"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures-core = { workspace = true }
smallvec = { workspace = true }
